Fix button alignmant, add footer. Also, needs more memes

--- a/src/style.css
+++ b/src/style.css
@@ -7,15 +7,26 @@ html, body {
 	font-size: 20px;
 }
 
-header {
+header, footer {
 	text-align: center;
+	display: block;
+}
+
+footer {
+	color: #888;
 }
 
 main {
+	display: block;
+	overflow: auto;
 	width: 100%;
 	max-width: 700px;
 	margin: 42px auto;
 	text-align: center;
+}
+
+a {
+	color: inherit;
 }
 
 img {
